--- a/templates/productView.html
+++ b/templates/productView.html
@@ -17,7 +17,7 @@
       </div>
       <div class="product-price-btnp">
         <p><strong>Price </strong><span>{{product.price}}</span>$</p>
-          <a href="/products/{{i.id}}"><button type="button">buy now</button></a>
+          <a href="/"><button type="button">buy now</button></a>
       </div>
     </div>
 
